--- a/core/templates/dashboard/super_owner/edit_store.html
+++ b/core/templates/dashboard/super_owner/edit_store.html
@@ -71,9 +71,9 @@
                                 
                                 <div class="mb-3">
                                     <label for="logo" class="form-label">شعار المتجر</label>
-                                    {% if store.logo %}
+                                    {% if store.main_logo_url %}
                                         <div class="mb-2">
-                                            <img src="{{ store.logo.url }}" alt="{{ store.name }}" class="img-thumbnail" style="max-height: 100px;">
+                                            <img src="{{ store.main_logo_url }}" alt="{{ store.name }}" class="img-thumbnail" style="max-height: 100px; object-fit: cover;">
                                         </div>
                                     {% endif %}
                                     <input type="file" class="form-control" id="logo" name="logo" accept="image/*">
